@@ -4,6 +4,9 @@ To Do:
 ASAP:
 =====
 
+- shifting left/right option for MA's
+- create some howto docs for quote plugins
+- add MA option to all plugins?
 
 
 Maybe some day:
