@@ -1,98 +1,104 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.0//EN" "http://www.w3.org/TR/xhtml-basic/xhtml-basic10.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-                   
   <meta http-equiv="Content-Type"
  content="text/html; charset=iso-8859-1">
   <title>Qtstalker - Frequently Asked Questions</title>
-                                  
   <meta name="generator"
  content="amaya 6.1, see http://www.w3.org/Amaya/">
 </head>
-  <body xml:lang="en" lang="en">
-         
+<body xml:lang="en" lang="en">
 <h2><u>Frequently Asked Questions</u></h2>
-       
-<h2>  </h2>
-          
+<h2> </h2>
 <h3>Can you make a binary package for Qtstalker ?</h3>
-          
-<p>Nope. Binary packages are so problematic now that they are a nightmare
-  for maintainers. I will leave it up to the distributions to provide binaries
-  and support them. Besides, learning how to compile from source makes you
- a better person, brings world peace and makes you more attractive to women.</p>
-          
+<p>Nope. Binary packages are so problematic now that they are a
+nightmare for maintainers. I will leave it up to the distributions to
+provide binaries and support them. Besides, learning how to compile
+from source makes you a better person, brings world peace and makes you
+more attractive to women.</p>
 <p></p>
-          
 <h3>What platforms are supported ?</h3>
-          
-<p>Currently, Linux compatible systems are supported. Some people have tried
+<p>Currently, Linux compatible and FreeBSD systems are supported. Some
+people have tried
 with some success on Solaris, IRIX and most unices. I'm afraid I cannot
-support any other platforms other than Linux compatible systems simply because I
-do not have the time or resources to maintain other operating systems. So,
-if you want to port it, I can help as much as I am able. Due to ethical and
- political feelings, I will not help or support anyone trying to do a win32
- port. The goal of this project is not to provide win32 users more gold bars
- for their prisons. So endith the lesson...</p>
-          
+support any other platforms other than Linux compatible systems simply
+because I
+do not have the time or resources to maintain other operating systems.
+So,
+if you want to port it, I can help as much as I am able. Due to ethical
+and political feelings, I will not help or support anyone trying to do
+a win32 port. The goal of this project is not to provide win32 users
+more gold bars for their prisons. So endith the lesson...</p>
 <p></p>
-          
-<h3>My favorite indicator(s) are not included in Qtstalker, what can I do 
-  ?</h3>
-          
-<p>Beer and cash tend to work best, but you might also try asking me. I'd
-  be glad to create a plugin for you provided you supply me with a formula
- and you agree to include it into Qtstalker under the GPL. Another option
-is if you don't want to GPL your formula, you may contract me to write a
+<h3>My favorite indicator(s) are not included in Qtstalker, what can I
+do ?</h3>
+<p>Beer and cash tend to work best, but you might also try asking me.
+I'd be glad to create a plugin for you provided you supply me with a
+formula and you agree to include it into Qtstalker under the GPL.
+Another option
+is if you don't want to GPL your formula, you may contract me to write
+a
 proprietary plugin for you for a fee.</p>
-          
 <p></p>
-          
 <h3>I'm a day trader, how come there is no intraday charting functions ?</h3>
-          
-<p>Qtstalker is an 'end of day' analysis tool. Personally I have no interest 
-  in day trading, I prefer to trade positions, and since this project arose
-  to fill my personal needs there are none. So, I have no plans to add them.
-  If someone wants to add these functions, I would gladly help out if needed.
-  It would be possible without too much difficulty. Anyway, you need real
-time  quotes, and real time quotes need proprietary software to decrypt them, 
- and  if you can afford to day trade, then you can afford real time quotes 
- and the $ for the software. So there. Besides, are you sure you want to sit
- in front of a screen all day when you could be getting a life ?</p>
-          
+<p>Qtstalker is an 'end of day' analysis tool. Personally I have no
+interest in day trading, I prefer to trade positions, and since this
+project arose to fill my personal needs there are none. So, I have no
+plans to add them. If someone wants to add these functions, I would
+gladly help out if needed. It would be possible without too much
+difficulty. Anyway, you need real
+time quotes, and real time quotes need proprietary software to decrypt
+them, and if you can afford to day trade, then you can afford real time
+quotes and the $ for the software. So there. Besides, are you sure you
+want to sit in front of a screen all day when you could be getting a
+life ?</p>
 <p></p>
-         
 <h3>Does Qtstalker handle stock splits ?</h3>
-   Nope. To keep things simple, there is an easy way to handle splits. Just 
- delete the chart that had a split, create the chart with the yahoo plugin 
- and then update the data. This will pull in all the new corrected data. Nice
- and simple. Yes, a little more work for the user but reduces overhead and
- keeps things nice and snappy. <br>
-   <br>
-     
+Nope. To keep things simple, there is an easy way to handle splits.
+Just delete the chart that had a split, create the chart with the yahoo
+plugin and then update the data. This will pull in all the new
+corrected data. Nice and simple. Yes, a little more work for the user
+but reduces overhead and keeps things nice and snappy. <br>
+<br>
 <h3>Where does the name Qtstalker come from ?</h3>
-  Well if you really must know...The Qt part comes from the GNU/Linux tradition
- of prefixing an X app with the GUI toolkit used. The stalker part is just
- cheesy word play stemming from the idea of "stock search" or "stalking stocks".
- I also just like the word "stalker" being the title of my favourite movie
- of all time.<br>
-  <br>
-   
+Well if you really must know...The Qt part comes from the GNU/Linux
+tradition of prefixing an X app with the GUI toolkit used. The stalker
+part is just cheesy word play stemming from the idea of "stock search"
+or "stalking stocks". I also just like the word "stalker" being the
+title of my favourite movie.<br>
+<br>
 <h3>Why don't you make this into a KDE app ?</h3>
-  I want to keep things as simple, efficient and portable as possible. Qt 
+I want to keep things as simple, efficient and portable as possible. Qt
 does everything I need.<br>
- <br>
- 
-<h3>There are alot of plugins I don't use taking up space. How do I get rid
+<br>
+<h3>There are alot of plugins I don't use taking up space. How do I get
+rid
 of them ?</h3>
-If you are sure there are plugins you don't need, then all you have to do
+If you are sure there are plugins you don't need, then all you have to
+do
 is delete them from the /usr/lib/qtstalker/* directory. Simple as that.
-Be sure you don't delete the directory itself, just the plugin *.so file.<br>
+Be sure you don't delete the directory itself, just the plugin *.so
+file.<br>
+<br>
+<h3>Why don't you use SQL for data storage?</h3>
+Two reasons, speed and simplicty. Once again I cite the KISS (Keep it
+simple, stupid!) philosophy. You can't beat Db btree functions for ease
+of use and speed. Using SQL would just add another layer of
+requirements and major speed penalties. It also means more
+administration hassles for the user to set up accounts, tables, logs
+etc. Why complicate things? Each chart is it's own compact, flexible,
+dynamic, self-contained db. Blows SQL away in this respect.<br>
+<br>
+<h3>Why is the Db 2.7.7 source included ?</h3>
+To avoid binary format changes in each major revision, I have made this
+version the stable standard and include the source to keep things as
+simple as possible for the user. No need to hunt around for packages
+etc. Just compile and go.<br>
 <br>
 <br>
 <br>
-  <br>
-  <br>
- <br>
+<br>
+<br>
+<br>
 </body>
 </html>
